--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-dist
+# NPM packages folder.
 node_modules
+
+# Build files
+dist/
+
+# lock files
+yarn.lock
+package-lock.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# node-waf configuration
+.lock-wscript
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Jest Coverage
+coverage
